--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,7 @@ header .header-container {
     font-weight: 600;
     border-radius: 5px;
     background: #FFF;
-    padding: 10px;
+    padding: 20px;
     border: 0;
 }
 
@@ -80,4 +80,19 @@ main {
     color: #737272;
     font-size: 25px;
     font-weight: 500;
+}
+.call-part {
+    margin-bottom: 150px;
+    background-image:
+    linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0.00) 100%),
+    url('../images/watch.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 50px 50% 50px 50px;
+    border-radius: 8px;
+}
+.call-part h3 {
+    font-size: 40px;
+    font-weight: 700;
+    color: #FFF;
 }
