--- a/styles/style.css
+++ b/styles/style.css
@@ -97,19 +97,24 @@ main {
     font-weight: 700;
     color: #FFF;
 }
-/* footer section styles */
-.footer-container {
-    padding: 0px 215px 90px;
-    background-color: #151414;
-    color: #FFF;
-    display: flex;
-    gap: 20em;
-}
-.social-column {
+/* .social-column {
     margin-top: 87px;
 }
 .form-column {
     margin-top: 110px;
+} */
+
+
+/* footer section styles */
+.footer-container {
+    padding: 70px 215px 90px;
+    background-color: #151414;
+    color: #FFF;
+    display: flex;
+    justify-content: space-between;
+    /* align-items: center; */
+    gap: 20em;
+    /* margin-bottom: auto; */
 }
 .social-column ul {
     list-style-type: none;
@@ -127,6 +132,16 @@ main {
     font-weight: 400;
     line-height: 26px;
 }
+.footer-container h3 {
+    margin-top: 0;
+    padding-top: 0;
+}
+/* .social-column {
+    margin-top: 0px;
+} */
+/* .form-column {
+    margin-bottom: auto;
+} */
 .form-column h3 {
     font-size: 25px;
     font-weight: 600;
